--- a/FinalProject/Assembly-CSharp.csproj
+++ b/FinalProject/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ShaderPropAnimator.cs" />
+    <Compile Include="Assets\Scripts\LevelActions\StairsActions\StairsDownLevelOne.cs" />
     <Compile Include="Assets\Scripts\Characters\Player\ExamplePlayer.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SkewTextExample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\WarpTextExample.cs" />
@@ -79,6 +80,7 @@
     <Compile Include="Assets\Scripts\Characters\Player\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Characters\Player\CameraController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
+    <Compile Include="Assets\Scripts\UI\StartMenu\StartMenu.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\DropdownSample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_PhoneNumberValidator.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMPro_InstructionOverlay.cs" />
@@ -91,8 +93,12 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextInfoDebugTool.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
-    <Compile Include="Assets\Scripts\UI\StartMenu\StartMenu.cs" />
-    <Compile Include="Assets\Scripts\LevelActions\StairsActions\StairsDownLevelOne.cs" />
+    <Compile Include="Assets\Scripts\LevelActions\StairsActions\StairUpLevelTwo.cs" />
+    <Compile Include="Assets\Scripts\LevelActions\DoorActions\OpenDoor.cs" />
+    <Compile Include="Assets\Scripts\LevelActions\EndGame.cs" />
+    <Compile Include="Assets\Scripts\UI\FinalMenu\FinalMenu.cs" />
+    <Compile Include="Assets\Scripts\ScriptableObject\PlayerObjects.cs" />
+    <Compile Include="Assets\Scripts\Example\CreatPlayer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
