Add image Key and logic key

--- a/FinalProject/Assembly-CSharp.csproj
+++ b/FinalProject/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ShaderPropAnimator.cs" />
     <Compile Include="Assets\Scripts\LevelActions\StairsActions\StairsDownLevelOne.cs" />
     <Compile Include="Assets\Scripts\Characters\Player\ExamplePlayer.cs" />
+    <Compile Include="Assets\Scripts\Characters\Enemy\ExampleEnemy.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SkewTextExample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\WarpTextExample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SimpleScript.cs" />
@@ -99,7 +100,8 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextInfoDebugTool.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
-    <Compile Include="Assets\Scripts\Characters\Enemy\ExampleEnemy.cs" />
+    <Compile Include="Assets\Scripts\Key\ExampleKey.cs" />
+    <Compile Include="Assets\Scripts\UI\UIPlayer\ExampleUIPlayer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
